bin/testsuite/tests/compiler/src/errors/compiler1799.swg
#global testerror "Err0232"

namespace A.B
{
    func toto() {}
}

#test
{
    var toto = &A.B.toto
    alias toto = A.B.toto
}
